Font Shifting Fix

--- a/src/index.css
+++ b/src/index.css
@@ -8,10 +8,12 @@
   scrollbar-width: none; 
 }
 @font-face {
+  font-display: optional;
   font-family: 'Mellow';
   src: url(../public/fonts/Coco-Light.ttf);
 }
 @font-face {
+  font-display: optional;
   font-family: 'Mellow Bold';
   src: url(../public/fonts/Futura-Bold.ttf);
 }
@@ -28,4 +30,158 @@ html, body, #root {
   overflow-y: hidden;
   overflow-x: hidden;
   font-family: 'Mellow';
+}
+Primary Color/* #0c0712 */
+.App {
+  height: 100%;
+  width: 100%;
+  position: relative;
+  overflow-y: hidden;
+  overflow-x: hidden;
+}
+.fadeOut {
+  opacity: 0;
+}
+.preloader {
+  overflow-y: hidden;
+  overflow-x: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  z-index: 3;
+  position: absolute;
+  background: #FFA17F;  
+  background: -webkit-linear-gradient(to right, #00223E, #FFA17F);
+  background: linear-gradient(to right, #00223E, #FFA17F);
+  transition: all 1s;      
+}
+.preloaderContent {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.heart {
+  position: absolute;
+  z-index: 1;
+  width: 130px;
+  animation: beat .7s infinite alternate;
+	transform-origin: center;
+  transition: all 1.5s 5s;
+} 
+.heartZoom {
+  width: 2000px;
+}
+.preloaderContent > div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.preloaderContent div > p {
+  font-family: inherit;
+  font-weight: bold;
+  font-size: 40px;
+  color: rgb(236, 231, 231);
+  position: relative;
+  top: 40px;
+  text-shadow: 0px 0px 1px black;
+}
+.content {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background: lightblue;
+}
+.content > img {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: 1;
+  object-fit: cover;
+}
+.overlay {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  background: rgba(1, 27, 64, 0.7);
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+}
+.poem {
+  color: #FFFFFF;
+  width: 100%;
+  height: 650px;
+  overflow-x: auto;
+  position: relative;
+}
+.pushBox {
+  width: 100%;
+  height: calc(100% - 255px);
+  box-sizing: border-box;
+}
+.title {
+  text-align: center;
+  top: -20px;
+  height: 100px;
+  background-image: url(https://res.cloudinary.com/jedstroke/image/upload/v1661594032/azure_wveuzd.png);
+  background-blend-mode: lighten;
+  background-repeat: repeat;
+  padding-top: 30px;
+  z-index: 5;
+  display: flex;
+  font-weight: bolder;
+  text-shadow: 0px 0px 1px black;
+  justify-content: center ;
+  align-items: center;
+  position: sticky;
+  font-family: 'Mellow';
+}
+.stanza {
+  margin: auto;
+  margin-bottom: 25px;
+  max-width: 350px;
+  opacity: 0;
+  transform: translateY(60px);
+  transition: transform 0.6s, opacity 0.9s;
+}
+.line {
+  padding-left: 5px;
+  padding-right: 5px;
+  margin-bottom: 8px;
+  margin-top: 0px;
+  line-height: 1;
+  font-size: large;
+  font-weight: lighter;
+  color: white;
+  text-align: center;
+  text-shadow: 0px 0px 1px grey;
+}
+@keyframes beat {
+	to { transform: scale(1.2); }
+}
+.authorTxt {
+  text-decoration: none;
+  color: white;
+  font-size: large;
+}
+.author {
+  display: flex;
+  justify-content: flex-end;
+  padding-right: 30px;
+}
+footer {
+  color: white;
+  text-align: center;
+  font-size: small;
+}
+* ::selection {
+  background-color: rgb(170, 161, 161, 0.5);
+}
+.anote::selection {
+  background-color: transparent;
+  font-weight: bolder;
 }
